--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -34,7 +34,7 @@
     <meta name="author" content="<%= config.author %>">
     <meta name="description" content="<%= config.description %>">
     <meta name="keywords" content="<%= theme.head.keywords %>">
-    
+    <meta name="referrer" content="no-referrer" />
     <!--iOS -->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta name="apple-mobile-web-app-title" content="Title">
