add google adsence

--- a/layout/_partial/post-content.ejs
+++ b/layout/_partial/post-content.ejs
@@ -12,4 +12,14 @@
 		</div>
 	<% } %>
 	
+    <h2>Advertisements</h2>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-5513827905304864"
+         data-ad-slot="1318024911"
+         data-ad-format="auto"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
 </div>
