--- a/layout/_partial/import_js.ejs
+++ b/layout/_partial/import_js.ejs
@@ -38,10 +38,17 @@
         // Daily picture
         <% if(theme.img.daily_pic == "bing") { %>
         var url = '//query.yahooapis.com/v1/public/yql?q=' + encodeURIComponent('select * from json where url=@url') +
-            '&url=' + encodeURIComponent('https://www.bing.com/HPImageArchive.aspx?format=js&idx=0&n=1') +
+            '&url=' + encodeURIComponent('https://www.bing.com/HPImageArchive.aspx?format=js&idx=0&n=8') +
             '&format=json&callback=?';
         $.getJSON(url, function(query) {
-            $('#daily_picture_container').css("background-image", "url(//www.bing.com" + query.query.results.json.images.url + ")");
+            var random = Math.round(Math.random() * 8 - 0.5);
+            var img = query.query.results.json.images[random];
+            var $dailyPictureContainer = $('#daily_picture_container');
+            $dailyPictureContainer.css("background-image", "url(//www.bing.com" + img.url + "_800x600.jpg)");
+            $dailyPictureContainer.attr("title",  img.copyright);
+            $dailyPictureContainer.on('click', function() {
+                window.open(img.copyrightlink,'_blank');
+            });
         });
         <% } %>
     });
