Improve the daily picture

--- a/layout/_partial/import_js.ejs
+++ b/layout/_partial/import_js.ejs
@@ -44,7 +44,7 @@
             var random = Math.round(Math.random() * 8 - 0.5);
             var img = query.query.results.json.images[random];
             var $dailyPictureContainer = $('#daily_picture_container');
-            $dailyPictureContainer.css("background-image", "url(//www.bing.com" + img.url + "_800x600.jpg)");
+            $dailyPictureContainer.css("background-image", "url(//www.bing.com" + img.urlbase + "_800x600.jpg)");
             $dailyPictureContainer.attr("title",  img.copyright);
             $dailyPictureContainer.on('click', function() {
                 window.open(img.copyrightlink,'_blank');
